--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Milind B. Prabhu"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Theory Ph.D. Student, UMich"
   location         : "Ann Arbor, Michigan"
   employer         :
