--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Ann Arbor, Michigan"
   employer         :
   pubmed           : 
-  googlescholar    : 
+  googlescholar    : https://scholar.google.com/citations?user=vu73GNIAAAAJ&hl=en&oi=ao
   email            : " *first-name* + *pr@umich.edu* "
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
