--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,28 @@ description              : &description "C.S. Theory Ph.D. Student at University
 url                      : https://milind-prabhu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
+
+
+# Publication Category - The following the list of publication categories and their headings
+
+publication_category:
+
+  books:
+
+    title: 'Books'
+
+  manuscripts:
+
+    title: 'Journal Articles'    
+
+  conferences:
+
+    title: 'Conference Papers'
+
+
+
+# Site Settings
+
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
