--- a/_config.yml
+++ b/_config.yml
@@ -218,7 +218,7 @@ collections:
     permalink: /:collection/:path/
 
 
-# Defaults
+# These settings control how pages and collections are included in the site
 defaults:
   # _posts
   - scope:
