--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ analytics:
 author:
   name             : "Milind B. Prabhu"
   avatar           : "profile.jpg"
-  bio              : "Theory Ph.D. Student, UMich"
+  bio              : "Ph.D. Student, UMich"
   location         : "Ann Arbor, Michigan"
   employer         :
   pubmed           : 
