--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    tracking_id          :G-ZLM281HVP7
 
 
 # Site Author
